changed java version to 22 to use records, added compiler and surefire plugins